--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack -w",
+    "run": "yarn run build && node dist/main.js",
     "test": "jest"
   },
   "devDependencies": {
