--- a/package.json
+++ b/package.json
@@ -1,25 +1,13 @@
 {
   "name": "water-sort-puzzle",
   "version": "1.0.0",
-  "main": "dist/main.js",
+  "main": "solver/dist/main.js",
   "license": "MIT",
   "private": true,
-  "scripts": {
-    "build": "webpack",
-    "watch": "webpack -w",
-    "run": "yarn run build && node dist/main.js",
-    "test": "jest"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-typescript": "^7.13.0",
-    "@types/jest": "^26.0.22",
-    "babel-jest": "^26.6.3",
-    "jest": "^26.6.3",
-    "ts-loader": "^8.0.18",
-    "typescript": "^4.2.3",
-    "webpack": "^5.28.0",
-    "webpack-cli": "^4.5.0"
+  "workspaces": {
+    "packages": [
+      "solver",
+      "preview"
+    ]
   }
 }
