--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -2,6 +2,10 @@
   "compilerOptions": {
     "target": "es5",
     "module": "es2015",
+    "moduleResolution": "node",
+    "lib": ["es2015"],
+    "outDir": "dist",
+    "declaration": true,
     "strict": true,
     "noImplicitAny": true,
     "forceConsistentCasingInFileNames": true
