--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "water-sort-puzzle",
   "version": "1.0.0",
-  "main": "solver/dist/main.js",
   "license": "MIT",
   "private": true,
   "workspaces": {
     "packages": [
-      "solver",
+      "core",
+      "measure-difficulty",
       "preview"
     ]
   }
