--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -8,6 +8,9 @@
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
-    "forceConsistentCasingInFileNames": true
-  }
+    "forceConsistentCasingInFileNames": true,
+  },
+  "exclude": [
+    "test/*.test.ts"
+  ]
 }
