--- a/core/package.json
+++ b/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "core",
   "version": "1.0.0",
-  "main": "dist/core/src/main.js",
+  "main": "dist/src/main.js",
   "license": "MIT",
   "private": true,
   "scripts": {
