--- a/measure-difficulty/package.json
+++ b/measure-difficulty/package.json
@@ -10,12 +10,14 @@
     "run": "yarn run build && node dist/main.js"
   },
   "dependencies": {
-    "core": "*"
+    "core": "*",
+    "fs-extra": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.13",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-typescript": "^7.13.0",
+    "@types/fs-extra": "^9.0.9",
     "ts-loader": "^8.0.18",
     "typescript": "^4.2.3",
     "webpack": "^5.28.0",
